Block theme: Fix pattern thumbnail size on Safari

--- a/public_html/wp-content/themes/wporg-pattern-directory-2024/src/blocks/pattern-thumbnail/style.scss
+++ b/public_html/wp-content/themes/wporg-pattern-directory-2024/src/blocks/pattern-thumbnail/style.scss
@@ -35,6 +35,7 @@
 		margin: auto;
 		max-width: 100%;
 		max-height: 100%;
+		flex-basis: 0;
 	}
 
 	&.has-loaded {
